# antlr4-runtime-playground

./: .gitignore  CMakeLists.txt  README.md  ZLexer.g4  ZParser.g4  local-build.cmd  local-emscripten-build.cmd
.github/workflows/: build-mingw.yml
build.emscripten/: index.html
include/compiler/: ast.h  compiler.h  op.h  type_meta.h
include/vm/: jit.h  object_manager.h  shared.h  vm.h
src/: main.cpp
src/common/: logger.cpp  util.cpp
src/compiler/: bytecode_generator.cpp  compiler.cpp
src/compiler/ast/: expresssion.cpp  function.cpp  if.cpp  loop.cpp  program.cpp  statement.cpp  type.cpp  variable.cpp
src/compiler/op/: op.cpp
src/compiler/program/: program.cpp
src/compiler/type/: type.cpp  type_repository.cpp
src/compiler/type/extractor/: context_chain.cpp  type_extractor.cpp  type_helper.cpp
src/vm/: direct_threaded_vm.cpp  object_manager.cpp  vm_shared.cpp  vm_shared_inline.cpp
src/vm/jit/x64/: baseline_jitter.cpp  context_threaded_vm.cpp
